syntax = "proto3";
package sudoku;

option java_multiple_files = true;

message SudokuCell {
  int32 row = 1;
  int32 col = 2;
  int32 number = 3;
  repeated int32 cornerNotes = 4;
  Attributes attribute = 5;

  enum Attributes {
    ATTRIBUTES_UNSPECIFIED = 0;
    ATTRIBUTES_GENERATED = 1;
  }
}

message SudokuGrid {
  int64 seed = 1;
  repeated SudokuCell data = 2;
}